--- a/index.html
+++ b/index.html
@@ -4,110 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="styles/styles.css" /> -->
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
         <div class="header__body">
-          <span class="header__logo">
-            <svg
-              width="45"
-              height="24"
-              viewBox="0 0 63 33"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M20.387 32.807H27.3634L31.3065 28.7982L35.2495 32.807H42.1987L31.2928 21.7194L20.387 32.807ZM0 8.91576L11.7519 31.9839L18.8655 25.1021L10.3613 11.6293L0 8.91576ZM62.7273 8.91219L50.9755 31.9804L43.8619 25.0985L52.3663 11.6257L62.7273 8.91219ZM31.297 0L19.5722 16.0817L22.7013 21.3544L31.297 12.8804L39.8925 21.3544L43.0216 16.0817L31.297 0Z"
-                fill="white"
-              />
-            </svg>
-          </span>
+          <span class="header__logo"> </span>
           <button class="header__button">Заказать звонок</button>
           <span class="header__contact-number">+7 (4212) 25-30-85</span>
-          <svg
-            class="header__burger-menu-icon"
-            width="43"
-            height="43"
-            viewBox="0 0 43 43"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <g filter="url(#filter0_d_1_6076)">
-              <circle cx="20.5" cy="18.5" r="17.5" fill="#292929" />
-            </g>
-            <rect
-              x="11.75"
-              y="14.75"
-              width="17.5"
-              height="1.25"
-              rx="0.625"
-              fill="white"
-            />
-            <rect
-              x="11.75"
-              y="18.5"
-              width="17.5"
-              height="1.25"
-              rx="0.625"
-              fill="white"
-            />
-            <rect
-              x="11.75"
-              y="22.25"
-              width="17.5"
-              height="1.25"
-              rx="0.625"
-              fill="white"
-            />
-            <defs>
-              <filter
-                id="filter0_d_1_6076"
-                x="0"
-                y="0"
-                width="43"
-                height="43"
-                filterUnits="userSpaceOnUse"
-                color-interpolation-filters="sRGB"
-              >
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feColorMatrix
-                  in="SourceAlpha"
-                  type="matrix"
-                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                  result="hardAlpha"
-                />
-                <feOffset dx="1" dy="3" />
-                <feGaussianBlur stdDeviation="2" />
-                <feColorMatrix
-                  type="matrix"
-                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
-                />
-                <feBlend
-                  mode="normal"
-                  in2="BackgroundImageFix"
-                  result="effect1_dropShadow_1_6076"
-                />
-                <feBlend
-                  mode="normal"
-                  in="SourceGraphic"
-                  in2="effect1_dropShadow_1_6076"
-                  result="shape"
-                />
-              </filter>
-            </defs>
-          </svg>
-          <nav class="header__menu nav-menu">
-            <a class="nav-menu__item" href="">О студии</a>
-            <a class="nav-menu__item" href="">Портфолио</a>
-            <a class="nav-menu__item" href="">Наши услуги</a>
-            <a class="nav-menu__item" href="">Новости</a>
-            <a class="nav-menu__item" href="">Отзывы</a>
-            <a class="nav-menu__item" href="">Контакты</a>
+          <div class="header__burger-menu-icon"></div>
+          <nav class="header__menu">
+            <a class="header__menu-item" href="">О студии</a>
+            <a class="header__menu-item" href="">Портфолио</a>
+            <a class="header__menu-item" href="">Наши услуги</a>
+            <a class="header__menu-item" href="">Новости</a>
+            <a class="header__menu-item" href="">Отзывы</a>
+            <a class="header__menu-item" href="">Контакты</a>
           </nav>
         </div>
       </header>
@@ -148,8 +62,9 @@
               <p class="section-1__subtitle">
                 Рассказываем что такое интернет магазин и зачем это нужно.
               </p>
-              <div class="section-1__button-block">
-                <button class="section-1__button"></button>
+              <div class="section-1__img"></div>
+              <p class="section-1__sub-button">Ответим на любой вопрос</p>
+              <button class="section-1__button"></button>
               </div>
             </div>
           </div>
