Cекция 2 для мобильного разрешения

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
               <div class="section-1__img"></div>
               <p class="section-1__sub-button">Ответим на любой вопрос</p>
               <button class="section-1__button"></button>
-              </div>
             </div>
           </div>
         </section>
@@ -73,35 +72,84 @@
         <section class="section-2">
           <h2 class="section-2__title">КАК МЫ РАБОТАЕМ НАД ВАШИМ ПРОЕКТОМ</h2>
           <div class="section-2__cards-steps-container">
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">01</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title">Анализ Целевой Аудитории</span>
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">02</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title">ПОДГОТОВКА ТЗ</span>
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">03</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title"
+                >ПОДПИСАНИЕ ДОГОВОРА<br />
+                И ОПЛАТА</span
+              >
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">04</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title"
+                >РАЗРАБОТКА САЙТА ИНТЕРНЕТ-МАГАЗИНА</span
+              >
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">05</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title"
+                >НАСТРОЙКА И НАПОЛНЕНИЕ ИНТЕРНЕТ-МАГАЗИНА</span
+              >
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
-            <a class="card-step">
-              <span class="card-step__number"></span>
+            <a href="#section-2" class="card-step">
+              <span class="card-step__number">06</span>
               <span class="card-step__icon"></span>
-              <span class="card-step__title"></span>
+              <span class="card-step__title">ПРИВЛЕЧЕНИЕ ПОКУПАТЕЛЕЙ</span>
+              <p class="card-step__description">
+                Подключите один из надежных сервисов: Яндекс.Деньги,
+                Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                смогут безопасно оплатить товар или услугу картой Visa или
+                Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
+                Сбербанк Онлайн или Альфа Клик.
+              </p>
             </a>
             <!-- иконка-плюсик через псевдоэлемент для текста при наведении -->
           </div>
