--- a/index.html
+++ b/index.html
@@ -159,22 +159,24 @@
           <div class="container">
             <div class="section-3__slider">
               <div class="section-3__content-block">
-                <div class="section-3__img"></div>
-                <p class="section-3__title"></p>
-                <p class="section-3__description"></p>
-                <img src="styles/img/features/logo-sber.png" alt="" />
-                <img src="styles/img/features/logo-yandex.png" alt="" />
-                <img src="styles/img/features/logo-robokassa.png" alt="" />
+                <div class="section-3__img section-3__img_web-pay"></div>
+                <p class="section-3__title">Принимайте платежи картой, 
+                  с помощью удобных 
+                  платежных систем!</p>
+                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно оплатить товар или услугу картой Visa или Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через Сбербанк Онлайн или Альфа Клик.</p>
+                <hr class="section-3__separator">
               </div>
               <div class="section-3__content-block">
-                <div class="section-3__img"></div>
-                <p class="section-3__title"></p>
-                <p class="section-3__description"></p>
+                <div class="section-3__img section-3__img_secure"></div>
+                <p class="section-3__title section-3__title_secure">Принимайте картой,
+                  пустые нули !</p>
+                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно.</p>
+                <hr class="section-3__separator">
               </div>
               <div class="section-3__content-block">
-                <div class="section-3__img"></div>
-                <p class="section-3__title"></p>
-                <p class="section-3__description"></p>
+                <div class="section-3__img section-3__img_products"></div>
+                <p class="section-3__title section-3__title_products">Интегрируем неинтегрируемое!</p>
+                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно.</p>
               </div>
 
               <div class="section-3__slider-controls">
