styles section-4, section-5

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           </nav>
         </div>
       </header>
+
       <main>
         <section class="section-1">
           <div class="container">
@@ -160,23 +161,40 @@
             <div class="section-3__slider">
               <div class="section-3__content-block">
                 <div class="section-3__img section-3__img_web-pay"></div>
-                <p class="section-3__title">Принимайте платежи картой, 
-                  с помощью удобных 
-                  платежных систем!</p>
-                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно оплатить товар или услугу картой Visa или Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через Сбербанк Онлайн или Альфа Клик.</p>
-                <hr class="section-3__separator">
+                <p class="section-3__title">
+                  Принимайте платежи картой, с помощью удобных платежных систем!
+                </p>
+                <p class="section-3__description">
+                  Подключите один из надежных сервисов: Яндекс.Деньги,
+                  Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                  смогут безопасно оплатить товар или услугу картой Visa или
+                  Mastercard, Яндекс.Деньгами, со счета мобильного телефона,
+                  через Сбербанк Онлайн или Альфа Клик.
+                </p>
+                <hr class="section-3__separator" />
               </div>
               <div class="section-3__content-block">
                 <div class="section-3__img section-3__img_secure"></div>
-                <p class="section-3__title section-3__title_secure">Принимайте картой,
-                  пустые нули !</p>
-                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно.</p>
-                <hr class="section-3__separator">
+                <p class="section-3__title section-3__title_secure">
+                  Принимайте картой, пустые нули !
+                </p>
+                <p class="section-3__description">
+                  Подключите один из надежных сервисов: Яндекс.Деньги,
+                  Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                  смогут безопасно.
+                </p>
+                <hr class="section-3__separator" />
               </div>
               <div class="section-3__content-block">
                 <div class="section-3__img section-3__img_products"></div>
-                <p class="section-3__title section-3__title_products">Интегрируем неинтегрируемое!</p>
-                <p class="section-3__description">Подключите один из надежных сервисов: Яндекс.Деньги, Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели смогут безопасно.</p>
+                <p class="section-3__title section-3__title_products">
+                  Интегрируем неинтегрируемое!
+                </p>
+                <p class="section-3__description">
+                  Подключите один из надежных сервисов: Яндекс.Деньги,
+                  Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
+                  смогут безопасно.
+                </p>
               </div>
 
               <div class="section-3__slider-controls">
@@ -190,51 +208,74 @@
 
         <section class="section-4">
           <div class="container">
-            <h2 class="section-4__title">кейсы говорят за себя</h2>
+            <h2 class="section-4__title"></h2>
             <div class="section-4__cards-container">
-              <a class="section-4__card">
-                <div class="section-4__img">
+
+              <a class="card">
+                <div class="card__img-wrap">
                   <img
+                    class="card__img"
+                    src="styles/img/cases/gabor-juhasz-68424-unsplash.png"
+                    alt=""
+                  />
+                </div>
+                <p class="card__title">Королевство цветов</p>
+                <p class="card__subtitle">Интернет-магазин</p>
+              </a>
+
+              <a class="card">
+                <div class="card__img-wrap">
+                  <img
+                    class="card__img"
                     src="styles/img/cases/ales-krivec-4176-unsplash.png"
                     alt=""
                   />
                 </div>
-                <p class="section-4__title"></p>
-                <p class="section-4__subtitle"></p>
+                <p class="card__title">Мастер климат</p>
+                <p class="card__subtitle">Интернет-магазин</p>
               </a>
-              <a class="section-4__card">
-                <div class="section-4__img"></div>
-                <p class="section-4__title"></p>
-                <p class="section-4__subtitle"></p>
+
+              <a class="card">
+                <div class="card__img-wrap">
+                  <img
+                    class="card__img"
+                    src="styles/img/cases/sharon-mccutcheon-535694-unsplash.png"
+                    alt=""
+                  />
+                </div>
+                <p class="card__title">Новая аптека</p>
+                <p class="card__subtitle">Интернет-магазин</p>
               </a>
-              <a class="section-4__card">
-                <div class="section-4__img"></div>
-                <p class="section-4__title"></p>
-                <p class="section-4__subtitle"></p>
-              </a>
-              <a class="section-4__card">
-                <div class="section-4__img"></div>
-                <p class="section-4__title"></p>
-                <p class="section-4__subtitle"></p>
+
+              <a class="card">
+                <div class="card__img-wrap">
+                  <img
+                    class="card__img"
+                    src="styles/img/cases/russ-ward-485776-unsplash.png"
+                    alt=""
+                  />
+                </div>
+                <p class="card__title">Восток Тех Резерв</p>
+                <p class="card__subtitle">Интернет-магазин</p>
               </a>
             </div>
 
-            <div class="section-4__feedback">
-              <p>
+            <div class="feedback">
+              <span class="feedback__title">
                 Оставьте свою заявку, чтобы получить БЕСПЛАТНУЮ консультацию!
-              </p>
-              <button class="section-4__button">Оставить заявку</button>
+              </span>
+              <button class="feedback__button">Оставить заявку</button>
             </div>
           </div>
         </section>
 
-        <section class="section-5>">
+        <section class="section-5">
           <h2 class="section-5__title">НАШИ КЛИЕНТЫ</h2>
           <div class="section-5__slider">
-            <div class="section-5__img"></div>
-            <div class="section-5__img"></div>
-            <div class="section-5__img"></div>
-            <div class="section-5__img"></div>
+              <img class="section-5__img" src="styles/img/clients/1.png" alt="">
+              <img class="section-5__img" src="styles/img/clients/2.png" alt="">
+              <img class="section-5__img" src="styles/img/clients/3.png" alt="">
+              <img class="section-5__img" src="styles/img/clients/4.png" alt="">
           </div>
           <div class="section-5__slider-controls"></div>
         </section>
