--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
                   персональных данных.</label
                 >
 
-                <input class="section-6__captcha" id="captcha" type="image" src="styles/img/footer/captcha.png"/>
+                <input
+                  class="section-6__captcha"
+                  id="captcha"
+                  type="image"
+                  src="styles/img/footer/captcha.png"
+                />
                 <label for="captcha"></label>
 
                 <button class="section-6__button">Отправить</button>
@@ -335,41 +340,42 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__logo">
-          <img src="styles/img/footer/Logo.png" alt="" />
-        </div>
+        <div class="footer__body">
+            <img class="footer__logo" src="styles/img/footer/Logo.png" alt="" />
 
-        <div class="footer__content-block">
-          <span class="contacts__title">Контакты</span>
-          <span>ул. Волочаевская, 8г</span>
-          <span>+7 (4212)470-300</span>
-          <span>+7 (4212) 25-30-85</span>
-        </div>
+          <div class="footer__content-block">
+            <span class="footer__contacts-title">Контакты</span>
+            <span>ул. Волочаевская, 8г</span>
+            <span>+7 (4212)470-300</span>
+            <span>+7 (4212) 25-30-85</span>
+          </div>
 
-        <div class="footer__content-block">
-          <span class="contacts__title">Мы в соцсетях</span>
-          <a>Vkontakte</a>
-          <a>Linkedin</a>
-          <a>Telegram</a>
-        </div>
+          <div class="footer__content-block">
+            <span class="footer__contacts-title">Мы в соцсетях</span>
+            <a>Vkontakte</a>
+            <a>Linkedin</a>
+            <a>Telegram</a>
+          </div>
 
-        <div class="map-block">
-          <p>Найди нас на карте</p>
-          <svg
-            class="map-block__icon"
-            width="20"
-            height="50"
-            viewBox="0 0 20 50"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M1.67578 49.1505L18.0453 24.2297L1.82244 0.998046"
-              stroke="white"
-              stroke-width="2"
-            />
-          </svg>
-          <img class="map-block__img" src="styles/img/footer/Map.png" alt="" />
+          <div class="map-block">
+            <span>Найди нас на карте</span>
+
+            <svg
+              class="map-block__icon"
+              width="20"
+              height="50"
+              viewBox="0 0 20 50"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1.67578 49.1505L18.0453 24.2297L1.82244 0.998046"
+                stroke="white"
+                stroke-width="2"
+              />
+            </svg>
+            <img class="map-block__img" src="styles/img/footer/Map.png" alt="" />
+
         </div>
       </footer>
     </div>
