первая попытка в слайдер...

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="slick/slick.css">
     <title>Document</title>
   </head>
   <body>
@@ -270,13 +272,13 @@
 
         <section class="section-5">
           <h2 class="section-5__title">НАШИ КЛИЕНТЫ</h2>
-          <div class="section-5__slider">
-            <img class="section-5__img" src="styles/img/clients/1.png" alt="" />
+          <div class="section-5__slider slider single-item">
+              <img class="section-5__img" src="styles/img/clients/1.png" alt="" />
             <img class="section-5__img" src="styles/img/clients/2.png" alt="" />
             <img class="section-5__img" src="styles/img/clients/3.png" alt="" />
             <img class="section-5__img" src="styles/img/clients/4.png" alt="" />
           </div>
-          <div class="section-5__slider-controls"></div>
+          <!-- <div class="section-5__slider-controls"></div> -->
         </section>
 
         <section class="section-6">
@@ -378,7 +380,9 @@
 
         </div>
       </footer>
-    </div>
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
 
